--- a/index.html
+++ b/index.html
@@ -1,85 +1,50 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <link href="resources/css/main.css" rel="stylesheet">
-  </head>
-  <body>
+body {
+  font-family: "Helvetica", sans-serif;
+}
 
-    <!-- Hero Section -->
+h1,
+h2,
+h3 {
+  font-weight: bold;
+}
 
-    <div class="hero">
-      <h1>Broadway Design</h1>
+.hero {
+  background-image: url('https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.jpg');
+  text-align: center;
+  color: white;
+}
 
-      <p><a class="btn-nav" href="#">Home</a></p>
-      <p><a class="btn-nav" href="#process">Process</a></p>
-      <p><a class="btn-nav" href="#work">Work</a></p>
-      <p><a class="btn-nav" href="#team">Team</a></p>
-      <p><a class="btn-nav" href="#contact">Contact</a></p>
-    </div>
+.hero h1 {
+  font-size: 70px;
+}
 
-    <!-- Process Section -->
+.btn-nav {
+  font-size: 18px;
+  color: white;
+}
 
-    <div class="supporting" id="process">
-      <h2>Our Process</h2>
-      <div class="supporting-item">
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg">
-        <h3>Identify</h3>
-        <p>We focus on the most important details.</p>
-      </div>
-      <div class="supporting-item">
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg">
-        <h3>Understand</h3>
-        <p>We study our projects inside and out.</p>
-      </div>
-      <div class="supporting-item">
-        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg">
-        <h3>Execute</h3>
-        <p>We put everything we have into our work.</p>
-      </div>
-    </div>
+.supporting {
+  text-align: center;
+}
 
-    <!-- Mini Hero Section -->
+.supporting h2 {
+  font-size: 32px;
+}
 
-    <div class="hero">
-      <h2>Designed in New York</h2>
-    </div>
+.supporting h3 {
+  font-size: 23px;
+}
 
-    <!-- About Section -->
+.supporting-item p {
+  font-size: 14px;
+}
 
-    <div class="supporting" id="work">
-      <div class="supporting-item">
-        <h3>Portfolio</h3>
-        <p>Coming Soon</p>
-      </div>
-    </div>
+.hero h2 {
+  font-size: 23px;
+}
 
-    <div class="supporting" id="team">
-      <div class="supporting-item">
-        <h3>Team</h3>
-        <p>We're Hiring!</p>
-      </div>
-    </div>
-
-    <div class="supporting" id="contact">
-      <div class="supporting-item">
-        <h3>Contact</h3>
-        <p>Phone: (555)-555-5555</p>
-        <p>E-mail: test@example.com</p>
-        <p>Twitter: @test</p>
-      </div>
-    </div>
-
-    <!-- Footer Section -->
-
-    <div class="footer">
-      <p>
-        &copy; Broadway 2017
-        <a class="btn-nav" href="#">Home</a>
-        <a class="btn-nav" href="#about">About</a>
-        <a class="btn-nav" href="#work">Work</a>
-        <a class="btn-nav" href="#team">Team</a>
-        <a class="btn-nav" href="#contact">Contact</a>
-      </p>
-    </div>
-  </body>
-</html>
+.footer {
+  background-color: dimgray;
+  font-size: 11px;
+  color: white;
+}
